2:Added more pages and implemented css files

--- a/index.html
+++ b/index.html
@@ -1,46 +1,36 @@
 <!DOCTYPE html>
 <html>
-    <head>
-    <style>
-    .segment {
-      margin: 0 auto;
-      width: 95%;  /* Defines width of each segment */
-      padding: 10px;  /* Optional padding for content */
-      border: 2px solid#4F6F52 /*Changing the margin colour surrounding the segments*/
-    }
-    .segment.segment-one {
-      background-color: #1A4D2E; /* Green */
-    }
-    .segment.segment-two {
-      background-color: #F5EFE6; /* Cream */
-    }
+<head>
+  <title>Atlas Corporation</title>
+  <link rel="stylesheet" href="CSS/GenStructure.css"> </head>
+<body>
+  <div class="segment header">
+    <h1>Atlas Corporation</h1>
+  </div>
+  
+  <div class="segment nav">
+    <a href="#">About us</a>
+    <a href="#">Services</a>
+    <a href="#">Contact us</a>
+  </div>
 
-    </style>
-    </head>
-    <body>
-      <div class="segment segment-one">
-        <h1>Atlas Corporation</h1>
-      </div>
-      
-    <div class="segment segment-two">
-        <!--Heading 1 and 2 Text-->
-        <h1>About us</h1>
-        <h2>Welcome to Atlas.Your global Logistics partner</h2>
+  <div class="segment body">
+    <h1>About us</h1>
+    <h2>Welcome to Atlas.Your global Logistics partner</h2>
 
-        <!--A short about section for the organisation-->
-        <p>We are Atlas and for nearly 30 years we have provided hundreds of millions of customers in nearly 200 countries with our logistics solutions ranging from sending a birtday gift to a loved one to large scale supply chain management.</p>
-        <p>We as an organisation are dedicated to providing wide scale global transport and logistics with sutainability and efficiency in mind</p>
-        <p>We offer a comprehensive suite of services designed to streamline your supply chain and ensure your cargo arrives on time and on budget, anywhere in the world.</p>
+    <p>We are Atlas and for nearly 30 years we have provided hundreds of millions of customers in nearly 200 countries with our logistics solutions ranging from sending a birtday gift to a loved one to large scale supply chain management.</p>
+    <p>We as an organisation are dedicated to providing wide scale global transport and logistics with sutainability and efficiency in mind</p>
+    <p>We offer a comprehensive suite of services designed to streamline your supply chain and ensure your cargo arrives on time and on budget, anywhere in the world.</p>
 
-        <h3>What sets us apart:</h3>
-        <p><strong>Global Reach:</strong> Our extensive network spans the globe, connecting you to major markets and remote locations with ease.</p>
-        <p><strong>Seamless Solutions:</strong> We offer a wide range of freight forwarding, warehousing, and transportation solutions to meet your specific needs.</p>
-        <p><strong>Unwavering Reliability:</strong>You can count on us to deliver your shipments securely and efficiently, every time.</p>
-        <p><strong>Technology-Driven Expertise:</strong>Our cutting-edge technology platform provides real-time tracking and insightful data to keep you informed throughout the entire shipping process.</p>
-        <p><strong>Dedicated Support:</strong>Our team of experienced logistics specialists is here to provide personalized support and expert guidance at every step.</p>
+    <h3>What sets us apart:</h3>
+    <p><strong>Global Reach:</strong> Our extensive network spans the globe, connecting you to major markets and remote locations with ease.</p>
+    <p><strong>Seamless Solutions:</strong> We offer a wide range of freight forwarding, warehousing, and transportation solutions to meet your specific needs.</p>
+    <p><strong>Unwavering Reliability:</strong>You can count on us to deliver your shipments securely and efficiently, every time.</p>
+    <p><strong>Technology-Driven Expertise:</strong>Our cutting-edge technology platform provides real-time tracking and insightful data to keep you informed throughout the entire shipping process.</p>
+    <p><strong>Dedicated Support:</strong>Our team of experienced logistics specialists is here to provide personalized support and expert guidance at every step.</p>
 
-      </div>
-      
-        <script src="" async defer></script>
-    </body>
+  </div>
+  
+  <script src="" async defer></script>
+</body>
 </html>
