Commit 6:Adding comments

--- a/CargoInsurance.html
+++ b/CargoInsurance.html
@@ -1,27 +1,33 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!--Specifies that the document is written in HTML-->
 
-<html>
+<html> 
     <head>
       <title>Atlas Corporation</title>
       <link rel="stylesheet" href="CSS/GenStructure.css">
+      <!--Link to GenStructure external CSS-->
     </head>
+
     <body>
-        <div class="segment header">
-          <h1 style="color: #FFFFFF">Atlas Corporation</h1>
+        <div class="segment header"> <!--Class for header section-->
+          <h1 style="color: #FFFFFF">Atlas Corporation</h1> <!--Formatting the text to have a white font colour-->
           </div>
 
-          <div class="segment nav">
+          <div class="segment nav"> <!--Class for navigation section-->
+            <!--Navigation links-->
             <a href="#">About us</a>
             <a href="#">Services</a>
             <a href="#">Contact us</a>
         </div>
             
-        <div class="segment body">
+        <div class="segment body"> <!--Class for body/main content section-->
+
         <h1>Atlas Corporation: Protect Your Cargo with Confidence</h1>
         <p>At Atlas Corporation, we understand that transporting valuable cargo can be stressful.  Unexpected events can occur during shipping, potentially causing damage or loss to your goods.  That's why we offer comprehensive cargo insurance plans to give you peace of mind throughout the transportation process.</p>
         
         <h2>Why Choose Atlas Cargo Insurance?</h2>
-        <ul>
+
+        <ul> <!--Unordered list-->
+          <!--List Items-->
           <li><b>Comprehensive Coverage:</b> Our insurance plans offer a wide range of coverage options to protect your cargo against various risks, including theft, loss, damage from weather events, and more.</li>
           <li><b>Flexible Options:</b> We offer customizable insurance plans to fit the specific needs and value of your shipment.</li>
           <li><b>Competitive Rates:</b> Get the protection you need at an affordable price. We offer competitive insurance rates to ensure your cargo is safeguarded without breaking the bank.</li>
