--- a/Express.html
+++ b/Express.html
@@ -1,29 +1,33 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!--Specifies that the document is written in HTML-->
 
 <html>
     <head>
       <title>Atlas Corporation</title>
-      <link rel="stylesheet" href="CSS/GenStructure.css">
+      <link rel="stylesheet" href="CSS/GenStructure.css"> <!--Link to GenStructure external CSS-->
     </head>
+
     <body>
-        <div class="segment header">
-          <h1 style="color: #FFFFFF">Atlas Corporation</h1>
+        <div class="segment header"> <!--Class for header section-->
+          <h1 style="color: #FFFFFF">Atlas Corporation</h1> <!--Formatting the text to have a white font colour-->
           </div>
 
-          <div class="segment nav">
+          <div class="segment nav"> <!--Class for navigation section-->
+            <!--Navigation links-->
             <a href="#">About us</a>
             <a href="#">Services</a>
             <a href="#">Contact us</a>
         </div>
             
 
-        <div class="segment body">
+        <div class="segment body"> <!--Class for body/main content section-->
 
             <h1>Atlas Corporation: Express Shipping - International Delivery at Warp Speed</h1>
             <p><b>Your deadlines are unforgiving.  Neither should your shipping be.  Atlas Corporation's express shipping service guarantees rapid international delivery, perfect for those time-sensitive shipments.</b></p>
 
             <h2>Why Choose Atlas Express Shipping?</h2>
-            <ul>
+            
+            <ul> <!--Unordered list-->
+                <!--List Items-->
                 <li><b>Speed You Can Rely On:</b> We understand the importance of on-time delivery. Our express shipping options prioritize your cargo, ensuring it reaches its destination as quickly as possible.</li>
                 <li><b>Global Network:</b> With our extensive network of partners, we offer express shipping to almost any country worldwide.</li>
                 <li><b>Door-to-Door Convenience:</b> Relax and focus on your business. We handle everything from pick-up to final delivery at the destination.</li>
