--- a/Feedback.html
+++ b/Feedback.html
@@ -1,34 +1,49 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!--Specifies that the document is written in HTML-->
 <html>
+
 <head>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="CSS/GenStructure.css">
-  <link rel="stylesheet" href="CSS/BackImg.css">  <title></title>
+  <meta charset="utf-8"> <!--Character encoding-->
+  <link rel="stylesheet" href="CSS/GenStructure.css"> <!--Link to GenStructure external CSS which affects the general structure-->
+  <link rel="stylesheet" href="CSS/BackImg.css">  <title></title> <!--Link to BackImg external CSS which affects the formatting of the background img-->
 </head>
+
 <body>
-  <div class="segment header">
-    <h1>Atlas Corporation</h1>
+  <div class="segment header"> <!--Class for header section-->
+    <h1 style="color: #FFFFFF">Atlas Corporation</h1> <!--Formatting the text to have a white font colour-->
   </div>
 
-  <div class="segment nav">
+  <div class="segment nav"> <!--Class for navigation section-->
+    <!--Navigation links-->
     <a href="#">About us</a>
     <a href="#">Services</a>
     <a href="#">Contact us</a>
   </div>
 
-  <div class="segment body">
-    <ul class="contact-details">
+  <div class="segment body"> <!--Class for body/main content section-->
+
+    <ul class="contact-details"> <!--Unordered list-->
+      <!--Contact details list-->
       <li><i class="fas fa-phone-alt"></i> +254 791-208-489</li>
       <li><i class="fas fa-envelope"></i> customercare@atlas.com</li>
       <li><i class="fas fa-map-marker-alt"></i> 123 Mswari street, westlands, Nairobi</li>
     </ul>
+
     <p>or reach us through:</p>
+
+    <!-- Form to send message -->
+    <!-- Label and input field for name -->
     <label for="name">Name:</label>
     <input type="text" id="name" name="name" required>
     <br><br>
+
+    <!-- Label and input field for email -->
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" required>
+    
+    <!-- Textarea for message -->
     <textarea id="message" name="message" rows="5" required></textarea>
+    
+    <!-- Submit button to send message -->
     <button type="submit">Send Message</button>
   </div>
 
