--- a/Frieght.html
+++ b/Frieght.html
@@ -1,29 +1,34 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!--Specifies that the document is written in HTML-->
 
 <html>
     <head>
       <title>Atlas Corporation</title>
-      <link rel="stylesheet" href="CSS/GenStructure.css">
+      <link rel="stylesheet" href="CSS/GenStructure.css"> <!--Link to GenStructure external CSS-->
     </head>
+
     <body>
-        <div class="segment header">
-          <h1 style="color: #FFFFFF">Atlas Corporation</h1>
+        <div class="segment header"> <!--Class for header section-->
+          <h1 style="color: #FFFFFF">Atlas Corporation</h1> <!--Formatting the text to have a white font colour-->
           </div>
 
-          <div class="segment nav">
+          <div class="segment nav"> <!--Class for navigation section-->
+            <!--Navigation links-->
             <a href="#">About us</a>
             <a href="#">Services</a>
             <a href="#">Contact us</a>
         </div>
             
 
-        <div class="segment body">
+        <div class="segment body"> <!--Class for body/main content section-->
+
 
             <h1>Atlas Corporation: Your Global Freight Shipping Partner</h1>
             <p>At Atlas Corporation, we understand that getting your cargo where it needs to be, on time and on budget, is critical to your business success. That's why we offer a comprehensive suite of freight shipping solutions to meet your specific needs, whether you require the speed of air freight or the cost-effectiveness of ocean freight.</p>
 
             <h2>Choose the Perfect Freight Shipping Option:</h2>
-            <ul>
+
+            <ul> <!--Unordered list-->
+                <!--List Items-->
                 <li><b>Air Freight:</b> Need to get your cargo there fast? Our expedited air freight services ensure rapid and reliable international delivery, perfect for time-sensitive shipments.</li>
                 <li><b>Ocean Freight:</b> Moving a large volume of cargo internationally? Our ocean freight services provide a cost-effective and secure solution for transporting your goods across the globe.</li>
             </ul>
