--- a/Ocean.html
+++ b/Ocean.html
@@ -1,28 +1,31 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!--Specifies that the document is written in HTML-->
 
 <html>
     <head>
       <title>Atlas Corporation</title>
-      <link rel="stylesheet" href="CSS/GenStructure.css">
+      <link rel="stylesheet" href="CSS/GenStructure.css"> <!--Link to GenStructure external CSS-->
     </head>
+
     <body>
-        <div class="segment header">
-          <h1 style="color: #FFFFFF">Atlas Corporation</h1>
+        <div class="segment header"> <!--Class for header section-->
+          <h1 style="color: #FFFFFF">Atlas Corporation</h1> <!--Formatting the text to have a white font colour-->
           </div>
 
-          <div class="segment nav">
+          <div class="segment nav"> <!--Class for navigation section-->
+            <!--Navigation links-->
             <a href="#">About us</a>
             <a href="#">Services</a>
             <a href="#">Contact us</a>
         </div>
             
-        <div class="segment body">
+        <div class="segment body"> <!--Class for body/main content section-->
           <h1>Atlas Corporation: Ocean Freight - Cost-Effective Solutions for Large Shipments</h1>
           <p>Moving a large volume of cargo internationally?  Atlas Corporation's ocean freight services offer a reliable and economical way to get your goods where they need to be.</p>
 
           <h2>Why Choose Atlas Ocean Freight?</h2>
 
-          <ul>
+          <ul> <!--Unordered list-->
+            <!--List Items-->
             <li><b>Cost-Effective:</b> Ocean freight is the most cost-effective option for large shipments. We offer competitive rates and flexible container options to fit your needs.
             <li><b>Experienced Team:</b> Our team of ocean freight specialists will handle all the logistics, from customs clearance to port operations, ensuring a smooth and efficient journey for your cargo.
             <li><b>Global Coverage:</b> We have established relationships with major shipping lines, offering extensive port coverage worldwide.
