--- a/Tracking.html
+++ b/Tracking.html
@@ -1,40 +1,42 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!--Specifies that the document is written in HTML-->
 
 <html>
     <head>
       <title>Atlas Corporation</title>
-      <link rel="stylesheet" href="CSS/GenStructure.css">
+      <link rel="stylesheet" href="CSS/GenStructure.css"> <!--Link to GenStructure external CSS-->
     </head>
     <body>
-        <div class="segment header">
-          <h1 style="color: #FFFFFF">Atlas Corporation</h1>
+        <div class="segment header"> <!--Class for header section-->
+          <h1 style="color: #FFFFFF">Atlas Corporation</h1> <!--Formatting the text to have a white font colour-->
           </div>
 
-          <div class="segment nav">
+          <div class="segment nav"> <!--Class for navigation section-->
+            <!--Navigation links-->
             <a href="#">About us</a>
             <a href="#">Services</a>
             <a href="#">Contact us</a>
         </div>
             
-        <div class="segment body">
+        <div class="segment body"> <!--Class for body/main content section-->
 
-          <h1>Atlas Corporation: Real-Time Tracking Keeps You Informed</h1>
+          <h1>Atlas Corporation: Real-Time Tracking Keeps You Informed</h1> <!--Heading 1-->
           <p>At Atlas Corporation, transparency and peace of mind are paramount. That's why we offer a robust cargo tracking service that allows you to monitor the location and progress of your shipment in real-time, 24/7.</p>
 
-          <h2>Stay Informed Every Step of the Way</h2>
+          <h2>Stay Informed Every Step of the Way</h2> <!--Heading 2-->
           <p>Our user-friendly tracking system provides you with detailed information about your shipment, including:</p>
 
-          <ul>
+          <ul> <!--Unordered list-->
+            <!--List Items-->
             <li><b>Current Location:</b>See exactly where your cargo is at any given moment.</li>
             <li><b>Estimated Arrival Time:</b>Get up-to-date information on when your shipment is expected to arrive at its destination.</li>
             <li><b>Shipment History:</b>View a complete timeline of your shipment's journey, from pick-up to final delivery.</li>
             <li><b>Important Updates:</b>Receive real-time alerts on any significant events related to your shipment, such as customs clearance or arrival at a port.</li>
           </ul>
 
-          <h3>Simple and Convenient Tracking</h3>
+          <h3>Simple and Convenient Tracking</h3> <!--Heading 3-->
           <p>Tracking your shipment is easy with Atlas. You can access our tracking system anytime, anywhere through our website. Simply enter your shipment tracking number to access detailed information about your cargo.</p>
 
-          <h3>Transparency Builds Trust</h3>
+          <h3>Transparency Builds Trust</h3> <!--Heading 4-->
           <p>We believe in open communication and keeping you informed throughout the shipping process. Our real-time tracking service empowers you to stay in control and make informed decisions.</p>
 
           <p><b>For more information on our tracking services or to discuss your specific shipping needs, contact our experienced team today. Fill out our online quote form or call us at [Phone Number].</b></p>
