--- a/index.html
+++ b/index.html
@@ -1,28 +1,33 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!--Specifies that the document is written in HTML-->
 <html>
+
 <head>
   <title>Atlas Corporation</title>
-  <link rel="stylesheet" href="CSS/GenStructure.css"> </head>
+  <link rel="stylesheet" href="CSS/GenStructure.css"> <!--Link to GenStructure external CSS-->
+</head> 
+
 <body>
-  <div class="segment header">
-    <h1>Atlas Corporation</h1>
-  </div>
+  <div class="segment header"> <!--Class for header section-->
+    <h1 style="color: #FFFFFF">Atlas Corporation</h1> <!--Formatting the text to have a white font colour-->
+          </div>
   
-  <div class="segment nav">
+  <div class="segment nav"> <!--Class for navigation section-->
+    <!--Navigation links-->
     <a href="#">About us</a>
     <a href="#">Services</a>
     <a href="#">Contact us</a>
   </div>
 
-  <div class="segment body">
-    <h1>About us</h1>
-    <h2>Welcome to Atlas.Your global Logistics partner</h2>
-
+  <div class="segment body"> <!--Class for body/main content section-->
+    <h1>About us</h1> <!--Heading 1-->
+    <h2>Welcome to Atlas.Your global Logistics partner</h2> <!--Heading 2-->
+    <!--Basic text-->
     <p>We are Atlas and for nearly 30 years we have provided hundreds of millions of customers in nearly 200 countries with our logistics solutions ranging from sending a birtday gift to a loved one to large scale supply chain management.</p>
     <p>We as an organisation are dedicated to providing wide scale global transport and logistics with sutainability and efficiency in mind</p>
     <p>We offer a comprehensive suite of services designed to streamline your supply chain and ensure your cargo arrives on time and on budget, anywhere in the world.</p>
 
-    <h3>What sets us apart:</h3>
+    <h3>What sets us apart:</h3> <!--Heading 3-->
+    <!--Basic text with strong formatting for bolding-->
     <p><strong>Global Reach:</strong> Our extensive network spans the globe, connecting you to major markets and remote locations with ease.</p>
     <p><strong>Seamless Solutions:</strong> We offer a wide range of freight forwarding, warehousing, and transportation solutions to meet your specific needs.</p>
     <p><strong>Unwavering Reliability:</strong>You can count on us to deliver your shipments securely and efficiently, every time.</p>
