Commit 8:Linked tracking navigation button tracking page

--- a/Test2.html
+++ b/Test2.html
@@ -40,7 +40,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">Tracking</a>
+            <a class="nav-link" href="Tracking.html">Tracking</a>
           </li>
         </ul>
       </div>
