--- a/Test2.html
+++ b/Test2.html
@@ -32,7 +32,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
+            <a class="nav-link" href="index.html">About Us</a>
           </li>
 
           <li class="nav-item">
