--- a/Test2.html
+++ b/Test2.html
@@ -29,10 +29,10 @@
               Services
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Express Shipping</a>
-              <a class="dropdown-item" href="#">Freight Shipping</a>
+              <a class="dropdown-item" href="Express.html">Express Shipping</a>
+              <a class="dropdown-item" href="Frieght.html">Freight Shipping</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Cargo Insurance</a>
+              <a class="dropdown-item" href="CargoInsurance.html">Cargo Insurance</a>
             </div>
           </li>
 
